# GameUnlocker

./: LICENSE  README.md  THIRD_PARTY_NOTICES.md  customize.sh  module.prop  release.json
.github/workflows/: build.yml
common/: action.sh  config.json  cpuinfo_spoof  post-fs-data.sh  service.sh  system.prop
cpp/: CMakeLists.txt  spoof_module.cpp  zygisk.hpp
webroot/: index.html
webroot/cgi-bin/: api.sh
